--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <section class="top-banner">
     <div class="half-width">
      <h1>Welcome To</h1>
-    <h1><span class="orange-highlight">Tarek</span> Website</h1>
+    <h1><span class="orange-highlight"> Md Tarek Rahman Chowdhury Oisharja</span> Website</h1>
     <h3>World-class professional web developer</h3>
     <p>You might saw me jumping,playing,stopping trains. But I though I should do something good without wasting time. That's why I am learning and mastering web development.  I will not stop until I become the hero of web development.</p>
     <a class="link-button" target="_blank" href="https://www.facebook.com/profile.php?id=100043416344298">HIRE ME</a>
